# pdp

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  scrapy.cfg
pdp/: items.py  middlewares.py  pipelines.py  settings.py
pdp/spiders/: flexjobs_com.py  weworkremotely_com.py
